updated content, fixed layout on all pages, fixed layout bug, began editing footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,12 +42,18 @@ iframe{
     height: 400px;
     width: 300px;
 }
-row{
+.row{
     padding:0;
+    margin:0;
+}
+
+.container-fluid{
+    padding:0;
+    margin:0;
 }
 
 .white-space{
-    padding-bottom: 30px;
+    padding-bottom: 50px;
 }
 
 .services a{
@@ -90,6 +96,9 @@ h2{
 }
 figure{
     text-align: center;
+}
+audio{
+    width:75%;
 }
 .tracks-align h1{
     text-align: center;
@@ -140,11 +149,18 @@ ol, ul {
 }
 /*..........................................videos*/
 
-.history-vid{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+.youtube-video{
+        width: 280px;
+        height: 160px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
 }
+
+.iframe{
+        width: 280px;
+        height: 160px;
+    }
 
 /*..........................................images*/
 
@@ -163,8 +179,6 @@ ol, ul {
         float:left;
         margin-right: 20px;
     }
-    
-
 
 .success-image{
     height: 150px;
@@ -325,10 +339,16 @@ footer{
     margin:0;
     position: relative;
 }
+.footer-space h5{
+    text-align: left;
+}
 .footer-space{
     padding-top: 25px;
     margin-right: 0;
     padding-right: 0;
+}
+.footer-form input{
+    width:100%;
 }
 
 .list-item {
@@ -345,6 +365,10 @@ footer{
 .uppercase-text{
     text-transform: uppercase;
 }
+.social-media{
+    text-align: center;
+}
+
 .social-media li{
     padding-bottom: 5px;
 }
@@ -368,8 +392,45 @@ footer{
     color:#FFFF00;
 }
 
+.footer-social li a i{
+    width: 31px;
+    height: 30px;
+    padding: 12px 0px;
+    border-radius: 50%;
+    font-size: 23px;
+    line-height: 3px;
+    text-align: center;
+    color: #fafafa;
+    background: #8f8f8f;
+    transition: all 0.25s ease-in-out;
+    -moz-transition: all 0.25s ease-in-out;
+    -webkit-transition: all 0.25s ease-in-out;
+    -o-transition: all 0.25s ease-in-out;
+}
+.footer-social li a i:hover{
+    color:#FFFF00;
+}
+
+.footer-social li{
+    padding-bottom: 5px;
+}
+
+.footer-social h5{
+    text-align: center;
+}
+
+.footer-social{
+    display: inline-block;
+}
+.site-map{
+    display: inline-block;
+}
+
 .footer-form{
     margin:0 auto;
+}
+.footer-form h5{
+    text-align: center;
 }
 
 .form-input{
@@ -394,7 +455,10 @@ footer{
 }
 
 @media (max-width:991px){
-
+    .footer-social h5{
+        text-align: left;
+    }
+    
     .list-item {
         margin-top: 5px;
     }
@@ -419,7 +483,13 @@ footer{
     }
     
     input[type="email"] {
-        width:250px;
+        width:100%;
+        position: relative;
+        display: inline-block;
+        margin : 0 auto;
+    }
+    input[type="text"] {
+        width:100%;
         position: relative;
         display: inline-block;
         margin : 0 auto;
@@ -430,7 +500,11 @@ footer{
         max-width: 70%;
         left:0;
     }
-   
+   .success-image{
+        height: 100px;
+        width: 100px;
+        margin:5px;
+    }
    
     .services-image{
         display: none;
@@ -438,4 +512,41 @@ footer{
     .logo-image{
         display: none;
     }
+    .tracks-align h1{
+        text-align: center;
+        font-size: 25px;
+    }
+    .nav-item{
+        font-size: 10px;
+        font-weight:600;
+    }
+    .footer-form{
+        display: none;
+    }
+    .services img{
+        width:100%;
+        height:100%;
+        
+}
+    .contact-form ul li{
+        font-size: 10px;
+        margin-left: -40%;
+    }
+    
+    .footer-social ul li b{
+        display:none;
+    }
+    
+}
+@media (max-width:350px){
+    
+    .iframe{
+        height: 35px;
+        width: 45px;
+    }
+    .youtube-video{
+        height: 100%;
+        width: 100%;
+    }
+    
 }
